--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -5,3 +5,15 @@ body,
     margin: 0;
     padding: 0;
 }
+.el-breadcrumb{
+    margin-bottom: 20px;
+}
+.el-card{
+    box-shadow:0 1px 1px 0px  !important;
+}
+.el-table{
+    margin-top: 15px;
+}
+.el-pagination{
+    margin-top: 15px;
+}
